@@ -35,3 +35,6 @@ current = Graham Ollis <plicease@cpan.org>
 ; if you have a preference for how to display your name
 ; feel free send a PR.  I don't use the git hisory.
 ;contributor =
+
+[PruneFiles]
+filename = xt/author/pod_spelling_common.t
